--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,13 @@
     "require": {
         "php": "^8.3",
         "symfony/config": "^6.4 || ^7.1",
+        "symfony/cache-contracts": "^3.5",
         "symfony/dependency-injection": "^6.4 || ^7.1",
         "symfony/http-kernel": "^6.4 || ^7.1",
         "twig/twig": "^3.15",
         "zenstruck/console-extra": "^1.4",
         "symfony/form": "^7.2",
-        "tacman/bing-news-search": "^2.0"
+        "tacman/bing-news-search": "*@dev"
     },
     "require-dev": {
         "phpstan/phpstan": "^2.0",
@@ -40,6 +41,7 @@
         }
     },
     "suggest": {
-        "survos/simple-datatables-bundle": "searchable/sortable tables when browsing"
+        "survos/simple-datatables-bundle": "searchable/sortable tables when browsing",
+        "symfony/cache": "cache search results"
     }
 }
